@@ -1,3 +1,9 @@
+2004-08-12  Pawel Salek
+
+	* libbalsa/imap-server.c: do not set key for unitialized object.
+	* src/balsa-index.c (balsa_index_selected_list): ref current
+	message as all others.
+
 2004-08-12 16:07  PeterB
 
 	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c: cache
